# one-within-the-novelist

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
configs/: stage_1_default.yaml
configs/judges/: _template.yaml  alexander-wales.yaml  gwern.yaml  jamie-wahls.yaml  mira-okonkwo.yaml  roon.yaml  sable-ahn.yaml  tomas-varga.yaml
configs/pipeline/: dry_run.yaml  submission.yaml
configs/scalar/: rubric_concept.yaml  rubric_dag.yaml  scorer_compositions.yaml
configs/stage_1/: dry_run.yaml  light.yaml  light_v24.yaml  medium.yaml  submission.yaml
configs/stage_2/: demo.yaml  dry_run.yaml  light.yaml  submission.yaml
configs/stage_3/: demo.yaml  dry_run.yaml  light.yaml  submission.yaml
configs/stage_4/: dry_run.yaml  light.yaml  submission.yaml
configs/voice_agents/: _template.yaml  casting-vocabulary.yaml  the-autotheory-dissident.yaml  the-direct-address-intimate.yaml  the-document-archivist.yaml  the-epistemic-witness.yaml  the-flat-affect-chronicler.yaml  the-institutional-voice.yaml  the-lyric-essayistic-fragmenter.yaml  the-maximalist-encyclopedist.yaml  the-oral-register-talker.yaml  the-probability-skeptic.yaml  the-reality-density-accumulator.yaml  the-reductionist.yaml  the-sensory-materialist.yaml  the-structural-experimentalist.yaml  the-synesthetic-correspondent.yaml  the-temporal-collagist.yaml
data/: convergence-patterns.yaml  seed-bank.yaml  voice-references-stylometric.yaml
data/voice-references/: README.md
docs/: CHANGELOG.md  engineering.md  ideas.md  prompting-guide.md  stages.md
docs/issues/: 2026-04-01-evaluate-pipeline.md  2026-04-01-llm-client-extraction.md  2026-04-01-map-elites-review.md  2026-04-01-operator-prompt-assembly.md  2026-04-01-shinka-compatibility-bridge.md  2026-04-01-shinka-integration.md  2026-04-01-stage1-data-models.md
docs/judging/: implementation-scoring.md  implementation-tier-a.md  implementation-tier-b.md  overview.md  rubric-anchors.md  tier-a-anti-slop.md  tier-b-resonance.md
docs/stage-1/: classification.md  evaluation.md  implementation.md  judges.md  operators.md  overview.md  population.md  rubric-anchors.md  seed-bank-curation.md  seed-bank.md
docs/stage-2/: evaluation.md  example.md  implementation.md  judges.md  mcts.md  operators.md  overview.md  qd-archive.md  rubric-anchors.md
docs/stage-3/: overview.md
docs/stage-4/: overview.md
owtn/: __main__.py  pipeline.py  runner.py  stats_report.py
owtn/evaluation/: __init__.py  __main__.py  anti_cliche.py  feedback.py  models.py  pairwise.py  prompts.py  stage_1.py  stage_2.py  stage_2_tier3.py  tournament.py
owtn/judging/: scoring.py
owtn/llm/: __init__.py  api.py  cache.py  call_logger.py  client.py  errors.py  kwargs.py  llm.py  query.py  recovery.py  result.py  tool_use.py
owtn/models/: config.py  judge.py
owtn/optimizer/: __init__.py  adapters.py  lineage_brief.py  lineage_prompt.txt  (+4 more)
tests/: conftest.py
(+328 files in other folders)
