[project]
name = "owtn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # LLM providers
    "anthropic>=0.49",
    "openai>=1.75",
    "google-genai>=1.13",
    "backoff",
    # Data
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "pyyaml",
    "spacy>=3.0",
    # Utilities
    "python-dotenv",
    "rich",
    "scipy",
    "cachier",
    "jsonref>=1.1.0",
    # ShinkaEvolve (local fork)
    "shinka-evolve",
    "sacrebleu>=2.6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
diversity = ["torch", "transformers", "sacrebleu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live_api: tests requiring real API calls (require API keys, cost money)"]

[dependency-groups]
dev = [
    "dspy-ai>=3.2.0",
    "mobi>=0.4.1",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "pytest",
    "pytest-asyncio",
    "rarfile>=4.2",
    "ruff",
]

[tool.uv.sources]
shinka-evolve = { path = "lib/shinka-evolve", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
