[project]
name = "owtn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # LLM providers
    "anthropic>=0.49",
    "openai>=1.75",
    "google-genai>=1.13",
    "backoff",
    # Data
    "numpy",
    "pandas",
    "pydantic>=2.0",
    "pyyaml",
    "spacy>=3.0",
    # Utilities
    "python-dotenv",
    "rich",
    "scipy",
    "cachier",
    "jsonref>=1.1.0",
    # ShinkaEvolve (local fork)
    "shinka-evolve",
    "sacrebleu>=2.6.0",
    # Web fetch (domain_expert critics' fetch_page tool)
    "trafilatura>=1.12",
    # spaCy small English model — used by Tier-A preprocessing, slop_score,
    # and stylometry. Models are not auto-installed with spacy; pin the
    # wheel so `uv sync` keeps it in the venv.
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
diversity = ["torch", "transformers", "sacrebleu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live_api: tests requiring real API calls (require API keys, cost money)"]

[dependency-groups]
dev = [
    "dspy-ai>=3.2.0",
    "mobi>=0.4.1",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "pytest",
    "pytest-asyncio",
    "rarfile>=4.2",
    "ruff",
]

[tool.uv.sources]
shinka-evolve = { path = "lib/shinka-evolve", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required so `en-core-web-sm @ <url>` direct-reference dependency is
# accepted by hatchling. spaCy models are not on PyPI; pinning the wheel
# URL is the standard pattern.
allow-direct-references = true
